deploy: 2d480d0e262d2f66c0104beb39dbb30bab9076af

--- a/pr-2305/gear_core/message/struct.ReplyMessage.html
+++ b/pr-2305/gear_core/message/struct.ReplyMessage.html
@@ -5,7 +5,7 @@
 </div></details><details class="toggle method-toggle" open><summary><section id="method.system" class="method"><a class="srclink rightside" href="../../src/gear_core/message/reply.rs.html#60-70">source</a><h4 class="code-header">pub fn <a href="#method.system" class="fn">system</a>(
     origin_msg_id: <a class="struct" href="../ids/struct.MessageId.html" title="struct gear_core::ids::MessageId">MessageId</a>,
     payload: <a class="type" href="type.Payload.html" title="type gear_core::message::Payload">Payload</a>,
-    simple_err: SimpleReplyError
+    simple_err: <a class="enum" href="../../gear_core_errors/simple/enum.SimpleReplyError.html" title="enum gear_core_errors::simple::SimpleReplyError">SimpleReplyError</a>
 ) -&gt; Self</h4></section></summary><div class="docblock"><p>Create new system generated ReplyMessage.</p>
 </div></details><details class="toggle method-toggle" open><summary><section id="method.into_message" class="method"><a class="srclink rightside" href="../../src/gear_core/message/reply.rs.html#73-88">source</a><h4 class="code-header">pub fn <a href="#method.into_message" class="fn">into_message</a>(
     self,
